--- a/Entrainement_cryptage.vcxproj.filters
+++ b/Entrainement_cryptage.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="Entrainement_cryptage.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="Ccesar.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ccesar.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
